# flom

./: .gitignore  Cargo.toml  README.md
.opencode/plans/: 1768791636084-proud-canyon.md  1768796579765-crisp-harbor.md
crates/flom/: Cargo.toml
crates/flom-config/: Cargo.toml
crates/flom-config/src/: config.rs  lib.rs
crates/flom-core/: Cargo.toml
crates/flom-core/src/: error.rs  lib.rs  result.rs
crates/flom-music/: Cargo.toml
crates/flom-music/src/: converter.rs  lib.rs
crates/flom-music/src/api/: mod.rs  odesli.rs
crates/flom-music/src/parsers/: apple_music.rs  mod.rs  spotify.rs
crates/flom-shorten/: Cargo.toml
crates/flom-shorten/src/: lib.rs
crates/flom-url/: Cargo.toml
crates/flom-url/src/: lib.rs
crates/flom/src/: main.rs
