[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
clap = { version = "4.5.26", features = ["derive"] }
console = "0.15.8"
crossterm = "0.29.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
url = "2.5.4"
thiserror = "2.0.11"
regex = "1.11.1"
toml = "0.8.20"
