[package]
name = "flom-shorten"
version = "0.1.0"
edition = "2024"

[dependencies]
flom-core = { path = "../flom-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
